--- a/task-1-results-card/index.html
+++ b/task-1-results-card/index.html
@@ -1,9 +1,49 @@
 <html lang="en">
-<head >
+  <head>
     <title>Task 1 Results Card</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Task 1 Results Card</h1>
-</body>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="result">
+          <h2>Your Result</h2>
+          <div class="score-circle">
+            <p class="score">76</p>
+            <p class="out-of">of 100</p>
+          </div>
+          <div class="status">Great</div>
+          <p class="message">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
+        <div class="summary">
+          <h3>Summary</h3>
+          <ul class="summary-list">
+            <li class="item reaction">
+              <span class="icon">&#x26A1;</span>
+              <span class="label">Reaction</span>
+              <span><strong>80</strong> <span class="gray">/ 100</span></span>
+            </li>
+            <li class="item memory">
+              <span class="icon">🧠</span>
+              <span class="label">Memory</span>
+              <span><strong>92</strong> <span class="gray">/ 100</span></span>
+            </li>
+            <li class="item verbal">
+              <span class="icon">💬</span>
+              <span class="label">Verbal</span>
+              <span> <strong>61</strong> <span class="gray">/ 100</span></span>
+            </li>
+            <li class="item visual">
+              <span class="icon">👁️</span>
+              <span class="label">Visual</span>
+              <span><strong>73 </strong><span class="gray">/ 100</span></span>
+            </li>
+          </ul>
+          <button class="continue">Continue</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
