--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <html lang="en">
-<head>
+  <head>
     <title>CSS Tasks</title>
-</head>
-<body>
-<main>
-    <header>
+  </head>
+  <body>
+    <main>
+      <header>
         <h1>CSS Tasks</h1>
-    </header>
+      </header>
 
-    <nav>
+      <nav>
         <ul>
-            <li><a href="task-1-results-card/index.html">Task 1 Results Card</a></li>
-            <li><a href="task-2-login-page/index.html">Task 2 Log In</a></li>
-            <li><a href="task-3-mortgage-calculator/index.html">Task 3 Mortgage Calculator</a></li>
-            <li><a href="task-4-calculator/index.html">Task 4 Calculator</a></li>
+          <li>
+            <a href="task-1-results-card/index.html">Task 1 Results Card</a>
+          </li>
+          <li><a href="task-2-login-page/index.html">Task 2 Log In</a></li>
+          <li>
+            <a href="task-3-mortgage-calculator/index.html"
+              >Task 3 Mortgage Calculator</a
+            >
+          </li>
+          <li><a href="task-4-calculator/index.html">Task 4 Calculator</a></li>
+          <li>
+            <a href="task-5-contact-form/index.html"
+              >Task 5 Contact Form</a
+            >
+          </li>
+          </li>
+          <li><a href="task-6-chat-input/index.html">Task 6 Chat Input</a></li>
+          <li><a href="task-7-layouts/index.html">Task 7 Layouts</a></li>
+          <li><a href="task-8-image-gallery/index.html">Task 8 Image Gallery</a></li>
+          <li><a href="task-9-accordion/index.html">Task 9 Accordion</a></li>
+          <li><a href="task-10-tabs/index.html">Task 10 Tabs</a></li>
         </ul>
-    </nav>
-</main>
-
-</body>
+      </nav>
+    </main>
+  </body>
 </html>
