--- a/task-5-contact-form/index.html
+++ b/task-5-contact-form/index.html
@@ -1,9 +1,40 @@
 <html lang="en">
-<head >
+  <head>
     <title>Task 5 Contact Form</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Task 5 Contact Form</h1>
-</body>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
+    <main>
+      <div class="contact-container">
+        <div class="contact-info">
+          <h1>Contact Us</h1>
+          <br />
+          <span
+            >We can't wait to hear from you. Feel free to get in touch with
+            us.</span
+          >
+          <div class="contact-details">
+            <span>Happy ST</span>
+            <br />
+            <span>000-111-222</span>
+          </div>
+        </div>
+        <div class="contact-form">
+          <form>
+            <label for="fullName">Full Name</label>
+            <input type="text" id="fullName" />
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+            <span>
+              <label for="message">Message</label>
+              <input type="text" id="message" />
+            </span>
+            <div>
+              <button>Send message</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
