--- a/task-7-layouts/index.html
+++ b/task-7-layouts/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html lang="en">
-<head >
+  <head>
     <title>Task Heading</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Task Heading</h1>
-</body>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1>Layouts</h1>
+    <a href="layouts/layout0.html">Layout 1</a>
+    <a href="layouts/layout1.html">Layout 2</a>
+    <a href="layouts/layout2.html">Layout 3</a>
+    <a href="layouts/layout3.html">Layout 4</a>
+  </body>
 </html>
