--- a/task-8-image-gallery/index.html
+++ b/task-8-image-gallery/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html lang="en">
-<head >
-    <title>Task Heading</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Task Heading</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid Layout</title>
+    <link rel="stylesheet" href="index.css">
+  </head>
+  <body>
+    <a href="./layouts/design.html">Design 1</a>
+    <a href="./layouts/design_1.html">Design 2</a>
+    <a href="./layouts/design_2.html">Design 3</a>
+  </body>
 </html>
