task 10 work update

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <li><a href="task-6-chat-input/index.html">Task 6 Chat Input</a></li>
           <li><a href="task-7-layouts/index.html">Task 7 Layouts</a></li>
           <li><a href="task-8-image-gallery/index.html">Task 8 Image Gallery</a></li>
-          <li><a href="task-9-accordion/index.html">Task 9 Accordion</a></li>
-          <li><a href="task-10-tabs/index.html">Task 10 Tabs</a></li>
+          <li><a href="task-9-calendar/index.html">Task 9 Accordion</a></li>
+          <li><a href="task-10-chat/index.html">Task 10 Tabs</a></li>
         </ul>
       </nav>
     </main>
