--- a/task-9-calendar/index.html
+++ b/task-9-calendar/index.html
@@ -1,9 +1,81 @@
+<!DOCTYPE html>
 <html lang="en">
-<head >
-    <title>Task Heading</title>
-    <link href="index.css" rel="stylesheet">
-</head>
-<body>
-    <h1>Task Heading</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calendar</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="calendar-container">
+      <div class="calendar-header">
+        <div class="header-controls">
+          <button>Today</button>
+          <button>Back</button>
+          <button>Next</button>
+        </div>
+        <div class="calendar-title">January 2025</div>
+        <div class="view-controls">
+          <button class="active">Month</button>
+          <button>Week</button>
+          <button>Day</button>
+        </div>
+      </div>
+      <div class="calendar-grid">
+        <div class="day-name">Sunday</div>
+        <div class="day-name">Monday</div>
+        <div class="day-name">Tuesday</div>
+        <div class="day-name">Wednesday</div>
+        <div class="day-name">Thursday</div>
+        <div class="day-name">Friday</div>
+        <div class="day-name">Saturday</div>
+
+        <div class="day-cell other-month">
+          <span class="day-number">29</span>
+        </div>
+        <div class="day-cell other-month">
+          <span class="day-number">30</span>
+        </div>
+        <div class="day-cell other-month">
+          <span class="day-number">31</span>
+        </div>
+
+        <div class="day-cell"><span class="day-number">01</span></div>
+        <div class="day-cell"><span class="day-number">02</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">03</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">04</span></div>
+        <div class="day-cell"><span class="day-number">05</span></div>
+        <div class="day-cell"><span class="day-number">06</span></div>
+        <div class="day-cell"><span class="day-number">07</span></div>
+        <div class="day-cell"><span class="day-number">08</span></div>
+        <div class="day-cell"><span class="day-number">09</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">10</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">11</span></div>
+        <div class="day-cell"><span class="day-number">12</span></div>
+        <div class="day-cell"><span class="day-number">13</span></div>
+        <div class="day-cell"><span class="day-number">14</span></div>
+        <div class="day-cell"><span class="day-number">15</span></div>
+        <div class="day-cell"><span class="day-number">16</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">17</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">18</span></div>
+        <div class="day-cell"><span class="day-number">19</span></div>
+        <div class="day-cell"><span class="day-number">20</span></div>
+        <div class="day-cell"><span class="day-number">21</span></div>
+        <div class="day-cell"><span class="day-number">22</span></div>
+        <div class="day-cell"><span class="day-number">23</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">24</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">25</span></div>
+        <div class="day-cell"><span class="day-number">26</span></div>
+        <div class="day-cell"><span class="day-number">27</span></div>
+        <div class="day-cell"><span class="day-number">28</span></div>
+        <div class="day-cell"><span class="day-number">29</span></div>
+        <div class="day-cell"><span class="day-number">30</span></div>
+        <div class="day-cell fri-sat"><span class="day-number">31</span></div>
+
+        <div class="day-cell fri-sat">
+          <span class="day-number">01</span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
