Final  Changes Put

--- a/task-5-contact-form/index.html
+++ b/task-5-contact-form/index.html
@@ -5,33 +5,37 @@
   </head>
   <body>
     <main>
-      <div class="contact-container">
-        <div class="contact-info">
-          <h1>Contact us</h1>
-          <p>We can't wait to hear from you. Feel free to get in touch with us.</p>
-          <div class="contact-details">
-            <p>Happy ST</p>
-            <p>000-111-222</p>
+      <div class="play-area">
+        <div class="contact-container">
+          <div class="contact-info">
+            <h1>Contact us</h1>
+            <p>
+              We can't wait to hear from you. Feel free to get in touch with us.
+            </p>
+            <div class="contact-details">
+              <p>Happy ST</p>
+              <p>000-111-222</p>
+            </div>
           </div>
-        </div>
-        <div class="contact-form">
-          <form>
-            <div class="form-group">
-              <label for="fullName">Full Name</label>
-              <input type="text" id="fullName" placeholder="" />
-            </div>
-            <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" id="email" placeholder="" />
-            </div>
-            <div class="form-group full-width">
-              <label for="message">Message</label>
-              <textarea id="message" rows="6" placeholder=""></textarea>
-            </div>
-            <div class="form-group full-width">
-              <button type="submit">Send message</button>
-            </div>
-          </form>
+          <div class="contact-form">
+            <form>
+              <div class="form-group">
+                <label for="fullName">Full Name</label>
+                <input type="text" id="fullName" placeholder="" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" id="email" placeholder="" />
+              </div>
+              <div class="form-group full-width">
+                <label for="message">Message</label>
+                <textarea id="message" rows="6" placeholder=""></textarea>
+              </div>
+              <div class="form-group full-width">
+                <button type="submit">Send message</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </main>
