--- a/task-10-chat/index.html
+++ b/task-10-chat/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="search-bar">
           <i class="bx bx-search"></i>
-          <input type="text" placeholder="Search for jobs, candidates..." />
+          <input type="text" placeholder="Search for jobs, candidates" />
         </div>
         <div class="header-actions">
           <button class="create-job-btn">
@@ -40,11 +40,45 @@
             />
           </svg>
           <div class="user-profile">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
-              <path
-                d="M463 448.2C440.9 409.8 399.4 384 352 384L288 384C240.6 384 199.1 409.8 177 448.2C212.2 487.4 263.2 512 320 512C376.8 512 427.8 487.3 463 448.2zM64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320zM320 336C359.8 336 392 303.8 392 264C392 224.2 359.8 192 320 192C280.2 192 248 224.2 248 264C248 303.8 280.2 336 320 336z"
-              />
-            </svg>
+            <div class="svg-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 640"
+                class="first-svg"
+              >
+                <path
+                  d="M463 448.2C440.9 409.8 399.4 384 352 384L288 384C240.6 384 199.1 409.8 177 448.2C212.2 487.4 263.2 512 320 512C376.8 512 427.8 487.3 463 448.2zM64 320C64 178.6 178.6 64 320 64C461.4 64 576 178.6 576 320C576 461.4 461.4 576 320 576C178.6 576 64 461.4 64 320zM320 336C359.8 336 392 303.8 392 264C392 224.2 359.8 192 320 192C280.2 192 248 224.2 248 264C248 303.8 280.2 336 320 336z"
+                ></path>
+              </svg>
+
+              <div class="circle-container">
+                <svg
+                  version="1.0"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="100%"
+                  height="100%"
+                  viewBox="0 0 1800 1800"
+                  preserveAspectRatio="xMidYMid meet"
+                >
+                  <g
+                    transform="translate(0,1800) scale(1,-1)"
+                    fill="#ffffff"
+                    stroke="none"
+                  >
+                    <path
+                      d="M792 1267 c-39 -40 -72 -79 -72 -87 0 -24 652 -670 675 -670 23 0 165 137 165 160 0 23 -651 670 -675 670 -12 0 -50 -30 -93 -73z"
+                    ></path>
+                    <path
+                      d="M562 1037 c-41 -42 -72 -81 -72 -93 0 -22 417 -444 439 -444 22 0 161 141 161 164 0 25 -416 446 -440 446 -9 0 -48 -33 -88 -73z"
+                    ></path>
+                    <path
+                      d="M321 796 c-56 -56 -72 -78 -67 -93 9 -28 190 -203 211 -203 20 0 152 125 161 153 5 15 -15 41 -92 118 -61 61 -107 99 -119 99 -12 0 -50 -30 -94 -74z"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+
             <span>Julian H.</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
               <path
@@ -155,7 +189,7 @@
                   <p>applied for <strong>UI / UX Designer</strong></p>
                 </div>
                 <div class="message-header">
-                  <p class="time">2h ago</p>
+                  <span class="time">2h ago</span>
                 </div>
               </div>
               <div class="preview">
@@ -177,7 +211,7 @@
                   <p>applied for <strong>UI / UX Designer</strong></p>
                 </div>
                 <div class="message-header">
-                  <p class="time">12h ago</p>
+                  <span class="time">12h ago</span>
                 </div>
               </div>
               <div class="preview">
@@ -189,7 +223,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Dominik W.">
                   DW
                 </div>
@@ -198,7 +232,7 @@
                   <p>applied for <strong>Teamlead Design</strong></p>
                 </div>
                 <div class="message-header">
-                  <p class="time">2 days ago</p>
+                  <span class="time">2 days ago</span>
                 </div>
               </div>
               <div class="preview">
@@ -210,7 +244,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Kevin M.">
                   KM
                 </div>
@@ -221,7 +255,7 @@
                   </p>
                 </div>
                 <div class="message-header">
-                  <p class="time">2 days ago</p>
+                  <span class="time">2 days ago</span>
                 </div>
               </div>
               <div class="preview">
@@ -233,7 +267,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Ramona J.">
                   RJ
                 </div>
@@ -242,7 +276,7 @@
                   <p>applied for <strong>UI / UX Designer</strong></p>
                 </div>
                 <div class="message-header">
-                  <p class="time">2 days ago</p>
+                  <span class="time">2 days ago</span>
                 </div>
               </div>
               <div class="preview">
@@ -254,7 +288,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Ramona J.">
                   <img
                     src="../assets/images/lina.jpeg"
@@ -279,7 +313,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Ramona J.">
                   RJ
                 </div>
@@ -300,7 +334,7 @@
             </div>
             <div class="message-item">
               <div class="message-content">
-                <div class="unread-indicator"></div>
+                <div class="read-indicator"></div>
                 <div class="avatar initials-avatar" data-name="Ramona J.">
                   RJ
                 </div>
@@ -356,7 +390,7 @@
           <div class="chat-messages">
             <div class="date-separator">09.03.20</div>
 
-            <div class="message sent">
+            <div class="message">
               <img
                 src="../assets/images/Untitled.jpeg"
                 alt="Julian Herbst"
@@ -366,7 +400,7 @@
                 <div class="sender-name">Julian Herbst</div>
                 <div class="message-text">
                   Hi Lena, I have a quick question regarding my application on
-                  the open position „UI / UX Designer".
+                  the open position, "UI / UX Designer".
                   <br /><br />
                   How long does it usually take for you to review a application?
                   I have some options right now but I would like to consider
@@ -376,14 +410,14 @@
                   Thanks and best regards,<br />
                   Julian Herbst
                 </div>
-                <div class="message-time">Message sent 1 week ago</div>
               </div>
             </div>
+            <div class="message-time">Message sent 1 week ago</div>
 
             <div class="date-separator">Today</div>
 
-            <div class="message received">
-              <div class="message-bubble">
+            <div class="message">
+              <div class="message-sent">
                 <div class="message-text">
                   Hi Julian,<br />
                   sorry for the delayed response but we're currently really busy
@@ -392,13 +426,12 @@
                   just took a look into yours.
                   <br /><br />
                   We like what we see and would like to send you our Design
-                  Challenge – that's the way we see how qualified you are. The
+                  Challenge that's the way we see how qualified you are. The
                   timeframe is a normal working day (~8 hours).
                   <br /><br />
                   Please finish it within the next 7 days. If you have any
                   questions feel free to message me here.
                 </div>
-                <div class="message-time">Message sent just now</div>
               </div>
               <img
                 src="../assets/images/lina.jpeg"
@@ -406,11 +439,15 @@
                 class="avatar"
               />
             </div>
+            <div class="message-time sent-time">Message sent just now</div>
           </div>
 
           <div class="chat-input">
             <div class="input-container">
               <input type="text" placeholder="Write your message" />
+            </div>
+
+            <div class="input-buttons">
               <div class="input-actions">
                 <i class="bx bx-paperclip"></i>
                 <i class="bx bx-bold"></i>
@@ -418,17 +455,24 @@
                 <i class="bx bx-list-ul"></i>
                 <i class="bx bx-list-ol"></i>
                 <i class="bx bx-link"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+                  <path
+                    d="M73 39.1C63.6 29.7 48.4 29.7 39.1 39.1C29.8 48.5 29.7 63.7 39 73.1L567 601.1C576.4 610.5 591.6 610.5 600.9 601.1C610.2 591.7 610.3 576.5 600.9 567.2L478.9 445.2C483.1 441.8 487.2 438.1 491 434.3L562.1 363.2C591.4 333.9 607.9 294.1 607.9 252.6C607.9 166.2 537.9 96.1 451.4 96.1C414.1 96.1 378.3 109.4 350.1 133.3C370.4 143.4 388.8 156.8 404.6 172.8C418.7 164.5 434.8 160.1 451.4 160.1C502.5 160.1 543.9 201.5 543.9 252.6C543.9 277.1 534.2 300.6 516.8 318L445.7 389.1C441.8 393 437.6 396.5 433.1 399.6L385.6 352.1C402.1 351.2 415.3 337.7 415.8 321C415.8 319.7 415.8 318.4 415.8 317.1C415.8 230.8 345.9 160.2 259.3 160.2C240.1 160.2 221.4 163.7 203.8 170.4L73 39.1zM257.9 224C258.5 224 259 224 259.6 224C274.7 224 289.1 227.7 301.7 234.2C303.5 235.4 305.3 236.5 307.2 237.3C334 253.6 352 283.2 352 316.9C352 317.3 352 317.7 352 318.1L257.9 224zM378.2 480L224 325.8C225.2 410.4 293.6 478.7 378.1 479.9zM171.7 273.5L126.4 228.2L77.8 276.8C48.5 306.1 32 345.9 32 387.4C32 473.8 102 543.9 188.5 543.9C225.7 543.9 261.6 530.6 289.8 506.7C269.5 496.6 251 483.2 235.2 467.2C221.2 475.4 205.1 479.8 188.5 479.8C137.4 479.8 96 438.4 96 387.3C96 362.8 105.7 339.3 123.1 321.9L171.7 273.3z"
+                  />
+                </svg>
               </div>
-            </div>
-            <div class="last">
-              <div>
+              <div class="last">
                 <i class="bx bx-smile"></i>
                 <i class="bx bx-dots-vertical-rounded"></i>
+                <button class="send-btn">
+                  <p>Send</p>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+                    <path
+                      d="M297.4 438.6C309.9 451.1 330.2 451.1 342.7 438.6L502.7 278.6C515.2 266.1 515.2 245.8 502.7 233.3C490.2 220.8 469.9 220.8 457.4 233.3L320 370.7L182.6 233.4C170.1 220.9 149.8 220.9 137.3 233.4C124.8 245.9 124.8 266.2 137.3 278.7L297.3 438.7z"
+                    ></path>
+                  </svg>
+                </button>
               </div>
-              <button class="send-btn">
-                Send
-                <i class="bx bx-chevron-down"></i>
-              </button>
             </div>
           </div>
         </div>
